--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DATABASE_URL=""
 MAX_CONNECTIONS=10
 
 ALLOWED_ORIGIN="localhost"
-MAX_AGE=4600# 76.67 Minutes = 76 Minutes and 40 Seconds
+MAX_AGE=4600
 
 LLM_MODEL="open_llama_7b-f16.bin"
 LLM_MODEL_ARCHITECTURE="llama"
